scope-free table lookup by name + immutable collections overhaul